<resources>
    <string name="input_url">搜索或输入网址</string>
    <string name="app_name">BigWhite</string>
    <string name="title_splash">BigWhite</string>
    <string name="splash">SPLASH</string>
    <string name="my_pop">pop</string>
    <string name="add_win">新建窗口</string>
    <string name="home_url">https://www.baidu.com/</string>
    <string name="add_bookmark">添加书签</string>
    <string name="bookmark">我的书签</string>
    <string name="history">历史记录</string>
    <string name="login">登录</string>
    <string name="exit">退出登录</string>
    <string name="back">返回</string>
    <string name="history_title">History</string>
    <string name="pic">图标</string>
    <string name="register">注册</string>
    <string name="account_hint">请输入用户名</string>
    <string name="key_hint">请输入密码</string>
    <string name="back_login">登录界面背景</string>
    <string name="enter_password">请输入密码</string>
    <string name="searchHis_title">搜索历史</string>
    <string name="clear">清空</string>
    <string name="startSearch">startSearch</string>
    <string name="bookmark_title">Bookmark</string>
    <string name="new_file">添加文件夹</string>
    <string name="author">来源：</string>
    <string name="dismiss">取消</string>
    <string name="sync_bookmark">书签同步</string>
    <string name="sync_history">历史同步</string>
    <string name="personalCenter">个人中心</string>
    <string name="loginOrRegister">登录/注册</string>
    <string name="email">请输入邮箱</string>
    <string name="yzm">请输入验证码</string>
    <string name="getYzm">获取验证码</string>
    <string name="myName">账号名</string>
    <string name="noAuthor">未知</string>
</resources>