<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.register"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="329dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="329dp"
            android:scaleType="fitXY"
            android:src="@mipmap/login"
            android:visibility="visible"
            android:contentDescription="@string/back_login" />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/left"
            android:onClick="back"
            android:contentDescription="@string/back"
            tools:ignore="UsingOnClickInXml" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="278dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/login_form"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="43dp"
            android:paddingEnd="31dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/account"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@null"
                    android:imeOptions="actionNone"
                    android:maxLines="1"
                    android:hint="@string/account_hint"
                    android:textColor="#000000"
                    android:textColorHint="#bcbcbc"
                    android:autofillHints="xxx"
                    android:inputType="text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/key"
                    android:contentDescription="@string/enter_password" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:hint="@string/key_hint"
                    android:textColor="@color/black"
                    android:textColorHint="#bcbcbc"
                    android:autofillHints="ss"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/login_register_activity_btn"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>
</RelativeLayout>