<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash"
    tools:context=".activity.chooseLoginRegister">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="329dp">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/left"
            android:onClick="back"
            tools:ignore="UsingOnClickInXml"
            android:contentDescription="@string/back" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_44dp"
        android:paddingRight="@dimen/dimen_44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff"
            android:textSize="@dimen/size_20sp"
            android:background="@drawable/shape_login_btn"
            android:onClick="login_onClick"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:background="@drawable/shape_register_btn"
            android:onClick="register_onClick"
            tools:ignore="UsingOnClickInXml" />
    </RelativeLayout>

</RelativeLayout>